--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,14 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/slick-carousel/slick/slick.css",
               "./node_modules/slick-carousel/slick/slick-theme.css",
+              "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css",
               "src/styles.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/slick-carousel/slick/slick.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"
             ]
           },
           "configurations": {
