--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
     "@fancyapps/fancybox": "^3.5.7",
+    "axios": "^0.23.0",
     "bootstrap": "^5.1.0",
     "jquery": "^3.6.0",
     "ngx-slick-carousel": "^0.5.1",
